<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:fillViewport="true"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?attr/colorTertiary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geography_quiz"
                android:textColor="?attr/colorTertiary"
                android:textSize="14sp"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:strokeWidth="1dp"
            app:strokeColor="?attr/colorOnSurface"
            app:cardElevation="4dp"
            app:cardBackgroundColor="?attr/colorSurface">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:singleSelection="true"
                    app:checkedButton="@id/btn_login">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:textSize="14sp"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        app:backgroundTint="@color/toggle_button_bg"
                        android:textColor="@color/toggle_button_text"
                        app:strokeColor= "?attr/colorTertiaryFixed" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="@string/register"
                        android:textSize="14sp"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        app:backgroundTint="@color/toggle_button_bg"
                        android:textColor="@color/toggle_button_text"
                        app:strokeColor= "?attr/colorTertiaryFixed" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="?attr/colorTertiaryFixed"
                    app:startIconDrawable="@drawable/ic_person"
                    android:hint="@string/name"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="?attr/colorTertiaryFixed"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="16sp"
                        android:hint="@string/email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="?attr/colorTertiaryFixed"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="16sp"
                        android:hint="@string/password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_auth"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingHorizontal="20dp"
                android:text="@string/or"
                android:textColor="?attr/colorTertiary"
                android:textSize="14sp" />

        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_guest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:text="🌎"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_as_guest"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:letterSpacing="0.03"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>